# wvasp

./: .gitignore  CHANGELOG.md  ENVIRONMENT_SETUP.md  Makefile  NEW_PYTEST_REPORT.md  README.md  TEST_COVERAGE_REPORT.md  bad_datas  bashrc  config_file  errors  good_datas  keepgoing.py  logs  pyproject.toml  pytest.ini  results  run_tests.py  setup.py  setup_environment.py
after/: bader-data  check-res  copy-file  deal-data  del  wk-bader  wk-check  wk-deal-data  wk-del
before/: buffing  main  mkf-in-loop  pos-to-all  pot-to-all  run  scancel  wk-main  wk-main-old  wk-mkf-in-loop  wk-pos-to-all  wk-pot-to-all
data/: INCAR  POSCAR_Ov1  buffing
demo/: demo_dft_plus_u.py  demo_parameter_management.py
demo/data/: README.md
examples/: crystaltoolkit_relax_viewer.ipynb
function/: environment  extract_functions.sh  function  functions  funs  setting
log/: errors  logs
main/: wk-bdr.sh  wk-che  wk-che.sh  wk-cpy.sh  wk-dda  wk-dda.sh  wk-del  wk-del.sh  wk-main  wk-main.sh  wk-mkf  wk-mkf.sh  wk-pos  wk-pos.sh  wk-pot.sh  wk-run.sh  wk-sca.sh
result/: checkcode  results
scripts/: README.md  analyze_results.py  batch_vasp.py  quick_vasp_setup.py
test/Ov0/None/Ag/M-2H/ads/: POSCAR.bak  print_out
test/Ov0/None/Ag/M/ads/: CONTCAR copy  POSCAR  print_out
test/Ov0/None/Au/M/bader/: POTCAR
test/ads/Ag/M-2H/: POTCAR
test/ads/Ag/M-2H/ads/: POSCAR
test/ads/Ag/M-H/: POSCAR
test/ads/Ag/M/ads/: OSZICAR  POSCAR
test/ads/Ag/M/bader/: POSCAR
test/ads/Au/M-2H/ads/: POSCAR
test/ads/Au/M-H/: POSCAR
test/ads/Au/M/ads/: CONTCAR
test/ads/Ba/M-2H/: POTCAR
test/ads/Ba/M-2H/ads/: POSCAR
test/ads/Ba/M-H/: POSCAR  POTCAR
test/ads/Ba/M/bader/: POSCAR
test/bader/Au/2H/: POSCAR  POTCAR
test/bader/Au/M/: KPOINTS
test/bader/Au/M-2H/: POSCAR
test/bader/Ca/M/: vasp.sbatch
test/bader/Ca/M-2H/: CONTCAR  POSCAR
tests/: README.md  __init__.py  conftest.py  test_core_base.py  test_core_io.py  test_core_modules.py  test_dft_plus_u.py  test_main.py  test_parameter_management.py  test_parameters.py  test_poscar.py  test_real_data_analysis.py  test_real_data_io.py
work/: bad_datas  datas  good_datas  job
wvasp/: __init__.py  __main__.py  main.py
wvasp/core/: __init__.py  base.py
wvasp/core/analysis/: __init__.py  band_analysis.py  dos_analysis.py  energy_analysis.py  md_analysis.py  neb_analysis.py  structure_analysis.py
wvasp/core/io/: __init__.py  base.py
wvasp/core/parameters/: __init__.py  magnetic.py  manager.py
wvasp/core/tasks/: __init__.py  base_task.py  calculation_tasks.py  job_management.py
wvasp/core/visualization/: __init__.py  dos_plotter.py
wvasp/utils/: config.py  constants.py  errors.py  parameter_manager.py
(+10 files in other folders)
